--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,8 +55,7 @@
 ===================================================== ***/
 
 /*===== Google Fonts =====*/
-@import url(https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@200;300;400;500;600;700;800&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
 
 /*===== General Variables =====*/
 :root {
@@ -97,8 +96,8 @@
   --medium: #02b875;
   --transition: all 0.2s cubic-bezier(0.19, 0.68, 0.49, 1.21);
   --transition2: all 0.3s linear;
-  --Lato: "Lato", sans-serif;
-  --Bricolage-Grotesque: "Bricolage Grotesque", sans-serif;
+  --Lato: "Montserrat", sans-serif;
+  --Bricolage-Grotesque: "Montserrat", sans-serif;
   --round3: 3px;
   --round5: 5px;
   --round10: 10px;
