--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,6 @@ h5,
 h6 {
   font-family: var(--Bricolage-Grotesque);
   font-weight: 700;
-  color: var(--white);
 }
 p,
 ul li,
@@ -302,7 +301,7 @@ ol li {
   line-height: 2.25rem;
 }
 a {
-  color: var(--white);
+  color: inherit;
 }
 a,
 a:hover,
@@ -3910,4 +3909,52 @@ nav ul li.active > a:before {
 }
 
 
-.bigbold {}
+.bigbold {
+  font-size: xx-large;
+  font-weight: 800;
+}
+/* Sidebar Navigation */
+.sidebar-nav {
+  margin-top: 2rem;
+}
+.sidebar-nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+.sidebar-nav li {
+  display: flex;
+  align-items: center;
+}
+.sidebar-nav li a {
+  display: flex;
+  align-items: center;
+  color: #888;
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  transition: all 0.3s ease;
+}
+.sidebar-nav li a::before {
+  content: "";
+  display: inline-block;
+  width: 2rem;
+  height: 1px;
+  background-color: #888;
+  margin-right: 1rem;
+  transition: all 0.3s ease;
+}
+.sidebar-nav li a:hover {
+  color: var(--white);
+}
+.sidebar-nav li a:hover::before {
+  width: 3rem;
+  background-color: var(--white);
+}
+.sidebar-nav li a.active {
+  color: var(--white);
+}
+.sidebar-nav li a.active::before {
+  width: 3rem;
+  background-color: var(--white);
+}
