--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,6 +518,10 @@ footer {
   padding-bottom: 25.625rem;
 }
 
+.pl-100 {
+  padding-left: 10rem;
+}
+
 /*=== Margins ===*/
 .mt-10 {
   margin-top: 0.625rem;
@@ -3910,7 +3914,7 @@ nav ul li.active > a:before {
 
 
 .bigbold {
-  font-size: 100px;
+  font-size: 60px;
   font-weight: 800;
 }
 
@@ -3960,4 +3964,16 @@ nav ul li.active > a:before {
 .sidebar-nav li a.active::before {
   width: 4rem;
   background-color: var(--white);
+}
+
+/* About section - hidden below viewport on desktop/laptop */
+@media (min-width: 992px) {
+  #about {
+    margin-top: 100vh;
+  }
+}
+
+/* Smooth scrolling */
+html {
+  scroll-behavior: smooth;
 }
