--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3923,12 +3923,14 @@ nav ul li.active > a:before {
   margin-top: 2rem;
 }
 .sidebar-nav ul {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   padding-left: 0;
 }
 .sidebar-nav li {
+  justify-content: flex-start;
   display: flex;
   align-items: center;
 }
